# edge-libos

./: .gitignore  .gitleaks.toml  .shellcheckrc  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  RELEASE_NOTES.md  deny.toml  impelementationplan
.github/workflows/: ci.yml
docs/: branch-protection.md
docs/adr/: 0001-p3-futex-semantics.md  0002-snapshot-wire-format.md  0003-metering-semantics.md  0003-p3-live-migration.md  0004-freeze-serve-wire.md  0004-metering-semantics.md  0005-p3-clone-threads.md  0005-snapshot-module-hash.md  0006-p3-clone-threads.md  0007-p2-dns-resolver.md  0007-p3-signal-delivery.md  0008-udp-socket-layer.md  README.md
examples/: import_fastapi.py  print_2_plus_2.py  serve_one_request.py
guest/: build.sh
guest/resolver/: freeaddrinfo.c  getaddrinfo.c  host_lookup.h
guest/syscall_shim/: .gitmodules.template  main.c  musl_syscall.c
scripts/: check_no_fragile_unwraps.sh  check_nr_consistency.sh  dev_setup.sh  preflight.sh  reproduce_dod.sh
src/: dispatch.rs  errno.rs  fd.rs  host.rs  kernel.rs  lib.rs  mem.rs  meter.rs  snapshot.rs  vfs.rs
src/cli/: bench.rs  error.rs  freeze.rs  migrate.rs  mod.rs  run.rs  serve.rs  subcommand.rs  trace.rs  usage.rs  util.rs
src/mm/: arena.rs  mod.rs
src/snapshot/: endian.rs  io.rs
src/sys/: epoll.rs  eventfd.rs  file.rs  futex.rs  identity.rs  ioctl.rs  memory.rs  mod.rs  path.rs  poll.rs  process.rs  random.rs  resolver.rs  signal.rs  socket.rs  time.rs  udp.rs
tests/: cli_migration_e2e.rs  clone_conformance.rs  count_tests.sh  edge_cli_freeze_serve_smoke.rs  edge_cli_metering_smoke.rs  edge_python_import_smoke.rs  edge_python_serve_smoke.rs  edge_python_smoke.rs  efault_fuzz.rs  exit_conformance.rs  fork_conformance.rs  fork_v2_child_thread.rs  futex_conformance.rs  guest_shim_build.rs  inherit_listener_conformance.rs  mem_safety.rs  migration_smoke.rs  mmap_conformance.rs  random_conformance.rs  resolve_conformance.rs  setsockopt_conformance.rs  signal_conformance.rs  signal_freeze_quiesce.rs  smoke.rs  snapshot_roundtrip.rs  snapshot_syscall_conformance.rs  socket_conformance.rs  stdio_conformance.rs  strace_baseline_diff.rs  time_conformance.rs  trace_host_smoke.rs  udp_conformance.rs  vfs_conformance.rs  wait4_conformance.rs
tests/common/: mod.rs
tests/conformance/: af_unix_abstract_returns_eopnotsupp.c  af_unix_bind_connect.c  arch_prctl.c  bind.c  brk.c  chdir.c  chmod.c  chroot.c  clock_getres.c  clock_gettime.c  clock_nanosleep.c  clone.c  connect.c  dup.c  dup2.c  dup3.c  epoll_create1.c  epoll_ctl.c  epoll_pwait.c  epoll_wait.c  eventfd2.c  eventfd_legacy.c  exit.c  f_dupfd_min.c  f_dupfd_min_below_next.c  faccessat.c  faccessat2.c  fchmod.c  fchmodat.c  fcntl_nonblock.c  fork.c  fstat.c  ftruncate.c  futex.c  getaddrinfo_eai_noname.c  getaddrinfo_loopback.c  getcwd.c  getdents64.c  getdents64_stream_position.c  getgroups.c  (+75 more)
tests/guests/: burn_fuel.wat  child_thread_exit.wat  serve_forever.wat  serve_one_request.wat
tests/strace_baselines/: baseline.boot.txt  baseline.fastapi.txt  diff.py  strace_native.sh
