[package]
name         = "edge-libos"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.93"
license      = "MIT OR Apache-2.0"
description  = "Linux-personality libOS kernel for CPython/FastAPI on Wasmtime"

[lib]
name = "edge_libos"
path = "src/lib.rs"

[[bin]]
name = "edge-python"
path = "src/bin/edge_python.rs"

[[bin]]
name = "trace-host"
path = "src/bin/trace_host.rs"

[dependencies]
wasmtime             = { version = "=45.0.3", features = ["component-model", "async", "anyhow"] }
tokio                = { version = "1.45", features = ["full"] }
futures              = "0.3"
anyhow               = "1"
thiserror            = "2"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
parking_lot          = "0.12"
rand                 = { version = "0.8", features = ["small_rng"] }
once_cell            = "1"
chrono               = { version = "0.4", default-features = false, features = ["clock"] }

# P2-D1: snapshot foundation. Both already transitive in Cargo.lock;
# declaring them direct makes src/snapshot.rs usable.
serde                = { version = "1", features = ["derive"] }
postcard             = { version = "1", features = ["alloc"] }

[dev-dependencies]
wat        = "1"
tempfile   = "3"
pretty_assertions = "1"

[features]
default = []
# Future: turn on to delegate to wasmtime-wasi instead of the hand-rolled VFS.
# P0 deliberately leaves this OFF (see impelementationplan §0 and decision log).
wasi-delegate = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

# CI-only profile. Production builds still use `release` (opt3 + thin LTO +
# codegen-units=1 + panic=abort). CI does NOT need those: it only needs
# binaries that run correctly and a test suite that passes. The expensive
# release knobs cost ~2-3x compile time, and `panic=abort` forces
# `cargo test` to recompile the whole dependency graph a second time under
# `panic=unwind`. This profile removes all of that:
#   - lto=false, codegen-units=256   → fast, parallel codegen
#   - panic="unwind"                 → `cargo build` and `cargo test` share
#                                       ONE dependency compile (no abort/unwind
#                                       split)
#   - opt-level=1                    → wasmtime still runs guests fast enough
#                                       for the smoke tests, but compiles quickly
# Used via `cargo {build,test} --profile ci` in .github/workflows/ci.yml.
[profile.ci]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
panic = "unwind"
debug = false
